--- a/contacts.html
+++ b/contacts.html
@@ -18,7 +18,7 @@
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"></li>
-                    <li class="nav-item"><a class="nav-link" href="integrations.html">Tecnologia</a></li>
+                    <li class="nav-item"></li>
                     <li class="nav-item"><a class="nav-link" href="pricing.html">Preços</a></li>
                     <li class="nav-item"><a class="nav-link active" href="contacts.html">Contatos</a></li>
                     <li class="nav-item"><a class="nav-link" href="login.html">Log in</a></li>
