--- a/contacts.html
+++ b/contacts.html
@@ -18,7 +18,7 @@
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"></li>
-                    <li class="nav-item"><a class="nav-link" href="integrations.html">Tecnologia</a></li>
+                    <li class="nav-item"></li>
                     <li class="nav-item"><a class="nav-link" href="pricing.html">Preços</a></li>
                     <li class="nav-item"><a class="nav-link active" href="contacts.html">Contatos</a></li>
                     <li class="nav-item"><a class="nav-link" href="login.html">Log in</a></li>
@@ -30,18 +30,18 @@
         <div class="container py-5">
             <div class="row">
                 <div class="col-md-8 col-xl-6 text-center mx-auto">
-                    <h2 class="display-6 fw-bold mb-4">Got any <span class="underline">questions</span>?</h2>
-                    <p class="text-muted">Our team is always here to help. Send us a message and we'll get back to you shortly.</p>
+                    <h2 class="display-6 fw-bold mb-4">possui alguma&nbsp;<span class="underline">dúvida</span>?</h2>
+                    <p class="text-muted">Nosso time está disponível para responder qualquer questão!</p>
                 </div>
             </div>
             <div class="row d-flex justify-content-center">
                 <div class="col-md-6">
                     <div>
                         <form class="p-3 p-xl-4" method="post" data-bs-theme="light">
-                            <div class="mb-3"><input class="shadow form-control" type="text" id="name-1" name="name" placeholder="Name"></div>
+                            <div class="mb-3"><input class="shadow form-control" type="text" id="name-1" name="Nome" placeholder="Nome"></div>
                             <div class="mb-3"><input class="shadow form-control" type="email" id="email-1" name="email" placeholder="Email"></div>
-                            <div class="mb-3"><textarea class="shadow form-control" id="message-1" name="message" rows="6" placeholder="Message"></textarea></div>
-                            <div><button class="btn btn-primary shadow d-block w-100" type="submit">Send </button></div>
+                            <div class="mb-3"><textarea class="shadow form-control" id="message-1" name="message" rows="6" placeholder="Mensagem"></textarea></div>
+                            <div><button class="btn btn-primary shadow d-block w-100" type="submit">Enviar</button></div>
                         </form>
                     </div>
                 </div>
