--- a/forgotten-password.html
+++ b/forgotten-password.html
@@ -18,7 +18,7 @@
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"></li>
-                    <li class="nav-item"><a class="nav-link" href="integrations.html">Tecnologia</a></li>
+                    <li class="nav-item"></li>
                     <li class="nav-item"><a class="nav-link" href="pricing.html">Preços</a></li>
                     <li class="nav-item"><a class="nav-link" href="contacts.html">Contatos</a></li>
                     <li class="nav-item"><a class="nav-link" href="login.html">Log in</a></li>
@@ -31,11 +31,11 @@
             <div class="row d-flex align-items-center">
                 <div class="col-md-6 text-center"><img class="img-fluid w-100" src="assets/img/illustrations/desk.svg"></div>
                 <div class="col-md-5 col-xl-4 text-center text-md-start">
-                    <h2 class="display-6 fw-bold mb-4">Forgot your <span class="underline">password</span>?</h2>
-                    <p class="text-muted">Enter the email associated with your account and we'll send you a reset link.</p>
+                    <h2 class="display-6 fw-bold mb-4">Esqueceu a senha?</h2>
+                    <p class="text-muted">Digite o email cadastrado para recuperar a senha</p>
                     <form method="post" data-bs-theme="light">
                         <div class="mb-3"><input class="shadow form-control" type="email" name="email" placeholder="Email"></div>
-                        <div class="mb-5"><button class="btn btn-primary shadow" type="submit">Reset password</button></div>
+                        <div class="mb-5"><button class="btn btn-primary shadow" type="submit">Recuperar senha</button></div>
                     </form>
                 </div>
             </div>
