Added ytdl module and binded to Get Clips button

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                         <h1 class="display-4 fw-bold mb-5"><strong>&nbsp;10 videos curtos!</strong></h1>
                         <h1 class="display-4 fw-bold mb-5"><strong>Crie 10x mais rapido!</strong></h1>
                         <form class="d-flex justify-content-center flex-wrap" method="post" data-bs-theme="light">
-                            <div class="shadow-lg mb-3"><input class="form-control" type="url"></div>
-                            <div class="shadow-lg mb-3"><button class="btn btn-primary" type="submit">Get Clips</button></div>
+                            <div class="shadow-lg mb-3"><input class="URL-input" type="url"></div>
+                            <div class="shadow-lg mb-3"><button class="btn convert-button" type="submit">Get Clips</button></div>
                         </form>
                     </div>
                     <div class="text-center"></div>
