Fixed html not getting style applied

--- a/html/index.html
+++ b/html/index.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Home - Zeit Video Editor</title>
-    <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../assets/css/Raleway.css">
-    <link rel="stylesheet" href="../assets/css/bs-theme-overrides.css">
-    <link rel="stylesheet" href="../assets/css/untitled.css">
+    <link rel="stylesheet" type="text/css" href="/css/Raleway.css">
+    <link rel="stylesheet" type="text/css" href="/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/css/bs-theme-overrides.css">
+    <link rel="stylesheet" type="text/css" href="/css/untitled.css">
 </head>
 
 <body>
@@ -36,7 +36,7 @@
                         <h1 class="display-4 fw-bold mb-5"><strong>Crie 10x mais rapido!</strong></h1>
                         <form class="d-flex justify-content-center flex-wrap" method="post" data-bs-theme="light">
                             <div class="shadow-lg mb-3"><input class="URL-input" type="url"></div>
-                            <div class="shadow-lg mb-3"><button class="btn convert-button" type="submit">Get Clips</button></div>
+                            <div class="shadow-lg mb-3"><button class="btn convert-button" type="button">Get Clips</button></div>
                         </form>
                     </div>
                     <div class="text-center"></div>
@@ -162,7 +162,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 order-first order-md-last">
-                    <div><img class="rounded img-fluid w-100 fit-cover" style="min-height: 300px;" src="assets/img/illustrations/teamwork.svg"></div>
+                    <div><img class="rounded img-fluid w-100 fit-cover" style="min-height: 300px;" src="/img/illustrations/teamwork.svg"></div>
                 </div>
             </div>
         </div>
@@ -171,7 +171,7 @@
         <div class="container py-4 py-xl-5">
             <div class="row gy-4 gy-md-0">
                 <div class="col-md-6 text-center text-md-start d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-start align-items-md-center justify-content-xl-center">
-                    <div><img class="rounded img-fluid fit-cover" style="min-height: 300px;" src="assets/img/illustrations/presentation.svg" width="800"></div>
+                    <div><img class="rounded img-fluid fit-cover" style="min-height: 300px;" src="/img/illustrations/presentation.svg" width="800"></div>
                 </div>
                 <div class="col">
                     <div style="max-width: 450px;">
@@ -215,7 +215,7 @@
                             <div class="my-3"><a class="btn btn-secondary me-2 mt-2" role="button" href="#">Button</a><a class="btn btn-light mt-2" role="button" href="#">Button</a></div>
                         </div>
                     </div>
-                    <div class="col-md-6 order-first order-md-last" style="min-height: 250px;"><img class="w-100 h-100 fit-contain pt-5 pt-md-0" src="assets/img/illustrations/web-development.svg"></div>
+                    <div class="col-md-6 order-first order-md-last" style="min-height: 250px;"><img class="w-100 h-100 fit-contain pt-5 pt-md-0" src="/img/illustrations/web-development.svg"></div>
                 </div>
             </div>
         </div>
