Reorganized files and folders

--- a/index.html
+++ b/index.html
@@ -349,8 +349,8 @@
             </div>
         </div>
     </footer>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/startup-modern.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/startup-modern.js"></script>
 </body>
 
 </html>
