Added server downloader module and client request

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
         </div>
     </footer>
     <script src="/js/bootstrap.min.js"></script>
-    <script src="/js/ytdl-downloader.js"></script>
+    <script src="/js/client_download_request.js"></script>
     <script src="/js/startup-modern.js"></script>
 </body>
 
