--- a/pages/login.html
+++ b/pages/login.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Log in - Zeit Video Editor</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/Raleway.css">
-    <link rel="stylesheet" href="assets/css/bs-theme-overrides.css">
-    <link rel="stylesheet" href="assets/css/untitled.css">
+    <link rel="stylesheet" type="text/css" href="/css/Raleway.css">
+    <link rel="stylesheet" type="text/css" href="/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/css/bs-theme-overrides.css">
+    <link rel="stylesheet" type="text/css" href="/css/untitled.css">
 </head>
 
 <body>
@@ -16,12 +16,11 @@
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><span>Zeit AI - Editor de video</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"></li>
-                    <li class="nav-item"><a class="nav-link" href="integrations.html">Tecnologia</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pricing.html">Preços</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contacts.html">Contatos</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="login.html">Log in</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="index">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/integrations">Tecnologias</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/pricing">Preços</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/contacts">Contatos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/login">Log in</a></li>
                 </ul><a class="btn btn-primary shadow" role="button" href="signup.html">Sign up</a>
             </div>
         </div>
