--- a/pages/integrations.html
+++ b/pages/integrations.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Integrations - Brand</title>
+    <title>Zeit AI - Editor de video</title>
     <link rel="stylesheet" type="text/css" href="/css/Raleway.css">
     <link rel="stylesheet" type="text/css" href="/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/css/bs-theme-overrides.css">
@@ -16,8 +16,8 @@
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><span>Zeit AI - Editor de video</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item"><a class="nav-link active" href="/index">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/integrations">Tecnologias</a></li>
+                    <li class="nav-item"><a class="nav-link " href="/index">Home</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="/integrations">Tecnologias</a></li>
                     <li class="nav-item"><a class="nav-link" href="/pricing">Preços</a></li>
                     <li class="nav-item"><a class="nav-link" href="/contacts">Contatos</a></li>
                     <li class="nav-item"><a class="nav-link" href="/login">Log in</a></li>
@@ -30,13 +30,11 @@
             <div class="row gy-4 gy-md-0">
                 <div class="col-md-6 text-center text-md-start d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-start align-items-md-center justify-content-xl-center">
                     <div style="max-width: 350px;">
-                        <h1 class="display-5 fw-bold mb-4">Skyrocket your productivity with our&nbsp;<span class="underline">tools</span>.</h1>
+                        <h1 class="display-5 fw-bold mb-4">Turbine sua produtividade com nossas&nbsp;<span class="underline">ferramentas</span>.</h1>
                         <p class="text-muted my-4">Tincidunt laoreet leo, adipiscing taciti tempor. Primis senectus sapien, risus donec ad fusce augue interdum.</p><a class="btn btn-primary btn-lg me-2" role="button" href="#">Button</a><a class="btn btn-light btn-lg" role="button" href="#">Button</a>
                     </div>
                 </div>
-                <div class="col-md-6">
-                    <div><img class="rounded img-fluid w-100 fit-cover" style="min-height: 300px;" src="assets/img/illustrations/startup.svg"></div>
-                </div>
+                
             </div>
         </div>
     </section>
