--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -16,9 +16,9 @@
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><span>Zeit AI - Editor de video</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item"><a class="nav-link active" href="/index">Home</a></li>
+                    <li class="nav-item"><a class="nav-link " href="/index">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="/integrations">Tecnologias</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/pricing">Preços</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="/pricing">Preços</a></li>
                     <li class="nav-item"><a class="nav-link" href="/contacts">Contatos</a></li>
                     <li class="nav-item"><a class="nav-link" href="/login">Log in</a></li>
                 </ul><a class="btn btn-primary shadow" role="button" href="signup.html">Sign up</a>
@@ -30,7 +30,7 @@
             <div class="row mb-5">
                 <div class="col-md-8 col-xl-6 text-center mx-auto">
                     <h2 class="display-6 fw-bold mb-4">Confira nossos planos<span class="underline"></span></h2>
-                    <p class="text-muted">Curae hendrerit donec commodo hendrerit egestas tempus, turpis facilisis nostra nunc. Vestibulum dui eget ultrices.</p>
+                    <p class="text-muted">Oferecemos planos flexíveis e acessíveis para atender às suas necessidades. Você pode escolher entre os planos Standard, Pro e Enterprise, com diferentes benefícios e vantagens. Não perca tempo e assine já o plano que mais combina com você.</p>
                 </div>
             </div>
             <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-lg-3">
@@ -39,10 +39,10 @@
                         <div class="card-body d-flex flex-column justify-content-between p-4">
                             <div>
                                 <h6 class="fw-bold text-muted">Standard</h6>
-                                <h4 class="display-5 fw-bold mb-4">$15</h4>
+                                <h4 class="display-5 fw-bold mb-4">R$15</h4>
                                 <ul class="list-unstyled">
-                                    <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon me-2"></span><span>150 minutos</span></li>
-                                    <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon me-2"></span><span>Créditos dispníveis imediatamente</span></li>
+                                    <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon me-2"></span><span></span></li>
+                                    <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon me-2"></span><span></span></li>
                                     <li class="d-flex mb-2"></li>
                                 </ul>
                             </div><a class="btn btn-primary" role="button" href="#">Assinar</a>
@@ -51,10 +51,10 @@
                 </div>
                 <div class="col">
                     <div class="card border-warning border-2 h-100">
-                        <div class="card-body d-flex flex-column justify-content-between p-4"><span class="badge bg-warning position-absolute top-0 end-0 rounded-bottom-left text-uppercase text-primary">Most Popular</span>
+                        <div class="card-body d-flex flex-column justify-content-between p-4"><span class="badge bg-warning position-absolute top-0 end-0 rounded-bottom-left text-uppercase text-primary">Mais popular</span>
                             <div>
                                 <h6 class="fw-bold text-muted">Pro</h6>
-                                <h4 class="display-5 fw-bold mb-4">$50</h4>
+                                <h4 class="display-5 fw-bold mb-4">R$50</h4>
                                 <ul class="list-unstyled">
                                     <li class="d-flex mb-2"></li>
                                     <li class="d-flex mb-2"></li>
@@ -68,7 +68,7 @@
                         <div class="card-body d-flex flex-column justify-content-between p-4">
                             <div class="pb-4">
                                 <h6 class="fw-bold text-muted">Enterprise</h6>
-                                <h4 class="display-5 fw-bold mb-4">$70</h4>
+                                <h4 class="display-5 fw-bold mb-4">R$70</h4>
                             </div><a class="btn btn-primary" role="button" href="#">Assinar</a>
                         </div>
                     </div>
