Now able to select cut duration and put in the url

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <form class="d-flex justify-content-center flex-wrap" method="post" data-bs-theme="light">
                             <div class="shadow-lg mb-3"><input class="URL-input" type="url"></div>
                             <div class="shadow-lg mb-3"><button class="btn convert-button" type="button">Get Clips</button></div>
-                            <select class="form-select" style="width: 99.901px;height: 43.3915px;padding-left: 8px;padding-right: 50px;text-align: right;">
+                            <select class="form-select cut-duration" style="width: 99.901px;height: 43.3915px;padding-left: 8px;padding-right: 50px;text-align: right;">
                                 <option value="10" selected>10s</option>
                                 <option value="30">30s</option>
                                 <option value="60" selected>1m</option>
