--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -19,7 +19,7 @@
                     <li class="nav-item"><a class="nav-link " href="/index">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="/integrations">Tecnologias</a></li>
                     <li class="nav-item"><a class="nav-link" href="/pricing">Preços</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="/contacts">Contatos</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="/contacts">Contato</a></li>
                     <li class="nav-item"><a class="nav-link" href="/login">Log in</a></li>
                 </ul><a class="btn btn-primary shadow" role="button" href="signup.html">Sign up</a>
             </div>
