--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <div class="text-center"></div>
                 </div>
                 <div class="col-12 col-lg-10 mx-auto">
-                    <div class="text-center position-relative"><iframe class="focus-ring focus-ring-primary" allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/CuFDcHB6TnY?autoplay=1&amp;mute=1&amp;loop=1&amp;playlist=CuFDcHB6TnY&amp;controls=0" width="560" height="315"></iframe></div>
+                    <div class="text-center position-relative"><iframe class="focus-ring focus-ring-primary" allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/CuFDcHB6TnY?autoplay=1&amp;mute=1&amp;loop=1&amp;playlist=CuFDcHB6TnY&amp;controls=0" ></iframe></div>
                 </div>
             </div>
         </div>
@@ -50,6 +50,7 @@
     <section>
         <div class="container py-4 py-xl-5">
             <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-lg-3">
+                
                 <div class="col">
                     <div class="card border-light border-1 d-flex justify-content-center p-4">
                         <div class="card-body">
@@ -59,13 +60,14 @@
                                 </svg></div>
                             <div>
                                 <h4 class="fw-bold">Shorts</h4>
-                                <p class="text-muted">Erat netus est hendrerit, nullam et quis ad cras porttitor iaculis. Bibendum vulputate cras aenean.</p><button class="btn btn-sm px-0" type="button">Learn More&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right">
+                                <p class="text-muted">Faça o upload do seu vídeo, e nossa IA vai garantir que ele fique no ponto para o Shorts: na vertical, curtinho e pronto para brilhar!</p><button class="btn btn-sm px-0" type="button">Saiba mais&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right">
                                         <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"></path>
                                     </svg><br></button>
                             </div>
                         </div>
                     </div>
                 </div>
+                
                 <div class="col">
                     <div class="card border-light border-1 d-flex justify-content-center p-4">
                         <div class="card-body">
@@ -75,7 +77,7 @@
                                 </svg></div>
                             <div>
                                 <h4 class="fw-bold">Tiktok</h4>
-                                <p class="text-muted">Erat netus est hendrerit, nullam et quis ad cras porttitor iaculis. Bibendum vulputate cras aenean.</p><button class="btn btn-sm px-0" type="button">Learn More&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right">
+                                <p class="text-muted">Coloque seu vídeo aí e veja a mágica da nossa IA fazendo ele bombar no TikTok. Ela vai ajustar a resolução e duração dos vídeos curtos e descolados!</p><button class="btn btn-sm px-0" type="button">Saiba mais&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right">
                                         <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"></path>
                                     </svg><br></button>
                             </div>
@@ -91,7 +93,7 @@
                                 </svg></div>
                             <div>
                                 <h4 class="fw-bold">Reels</h4>
-                                <p class="text-muted">Erat netus est hendrerit, nullam et quis ad cras porttitor iaculis. Bibendum vulputate cras aenean.</p><button class="btn btn-sm px-0" type="button">Learn More&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right">
+                                <p class="text-muted">Envia o vídeo e deixa nossa IA deixar ele top no Reels. Ela vai ajustar tudo pro Instagram, garantindo que o vídeo arrase no formato curto e estiloso.</p><button class="btn btn-sm px-0" type="button">Saiba mais&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right">
                                         <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"></path>
                                     </svg><br></button>
                             </div>
@@ -101,43 +103,7 @@
             </div>
         </div>
     </section>
-    <section>
-        <div class="container py-4 py-xl-5">
-            <div class="row gy-4 gy-md-0">
-                <div class="col-md-6 text-center text-md-start d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-start align-items-md-center justify-content-xl-center">
-                    <div><img class="rounded img-fluid fit-cover" style="min-height: 300px;" src="assets/img/illustrations/presentation.svg" width="800"></div>
-                </div>
-                <div class="col">
-                    <div style="max-width: 450px;">
-                        <h3 class="fw-bold pb-md-4">Features that make your team more&nbsp;<span class="underline">productive</span></h3>
-                        <p class="text-muted py-4 py-md-0">Venenatis leo imperdiet magna enim eu quisque, metus gravida pulvinar morbi.</p>
-                        <div class="row gy-4 row-cols-2 row-cols-md-2">
-                            <div class="col">
-                                <div><span class="fs-2 fw-bold text-primary bg-secondary">40+</span>
-                                    <p class="fw-normal text-muted">Amazing plugins</p>
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div><span class="fs-2 fw-bold text-primary bg-secondary">100+</span>
-                                    <p class="fw-normal text-muted">Ready-to use templates</p>
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div><span class="fs-2 fw-bold text-primary bg-secondary">123+</span>
-                                    <p class="fw-normal text-muted">Years of experience</p>
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div><span class="fs-2 fw-bold text-primary bg-secondary">123+</span>
-                                    <p class="fw-normal text-muted">Years of experience</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+
     <section class="py-5">
         <div class="container py-4 py-xl-5">
             <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-lg-3">
@@ -147,11 +113,11 @@
                             <div>
                                 <h6 class="fw-bold text-muted">Standard</h6>
                                 <h4 class="display-5 fw-bold mb-4">$15</h4>
-                                <ul class="list-unstyled">
+                               <!--  <ul class="list-unstyled">
                                     <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon me-2"></span><span>Lectus ut nibh quam, felis porttitor.</span></li>
                                     <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon me-2"></span><span>Ante nec venenatis etiam lacinia.</span></li>
                                     <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon me-2"></span><span>Porta suscipit netus ad ac.</span></li>
-                                </ul>
+                                </ul>-->
                             </div><a class="btn btn-primary" role="button" href="#">Comprar</a>
                         </div>
                     </div>
@@ -162,11 +128,11 @@
                             <div>
                                 <h6 class="fw-bold text-muted">Pro</h6>
                                 <h4 class="display-5 fw-bold mb-4">$38</h4>
-                                <ul class="list-unstyled">
+                               <!-- <ul class="list-unstyled">
                                     <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon me-2"></span><span>Lectus ut nibh quam, felis porttitor.</span></li>
                                     <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon me-2"></span><span>Ante nec venenatis etiam lacinia.</span></li>
                                     <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon me-2"></span><span>Porta suscipit netus ad ac.</span></li>
-                                </ul>
+                                </ul>-->
                             </div><a class="btn btn-warning" role="button" href="#">Comprar</a>
                         </div>
                     </div>
@@ -177,12 +143,12 @@
                             <div class="pb-4">
                                 <h6 class="fw-bold text-muted">Enterprise</h6>
                                 <h4 class="display-5 fw-bold mb-4">$70</h4>
-                                <ul class="list-unstyled">
+                                <!--<ul class="list-unstyled">
                                     <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon me-2"></span><span>Lectus ut nibh quam, felis porttitor.</span></li>
                                     <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon me-2"></span><span>Ante nec venenatis etiam lacinia.</span></li>
                                     <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon me-2"></span><span>Porta suscipit netus ad ac.</span></li>
                                     <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon me-2"></span><span>Morbi praesent aptent integer.</span></li>
-                                </ul>
+                                </ul>-->
                             </div><a class="btn btn-primary" role="button" href="#">Comprar</a>
                         </div>
                     </div>
@@ -190,47 +156,7 @@
             </div>
         </div>
     </section>
-    <section class="py-4 py-xl-5 mb-5">
-        <div class="container">
-            <div class="row mb-2">
-                <div class="col-md-8 col-xl-6 text-center mx-auto">
-                    <h2 class="display-6 fw-bold mb-5"><span class="pb-3 underline">FAQ<br></span></h2>
-                    <p class="text-muted mb-5">Curae hendrerit donec commodo hendrerit egestas tempus, turpis facilisis nostra nunc. Vestibulum dui eget ultrices.</p>
-                </div>
-            </div>
-            <div class="row mb-2">
-                <div class="col-md-8 mx-auto">
-                    <div class="accordion text-muted" role="tablist" id="accordion-1">
-                        <div class="accordion-item">
-                            <h2 class="accordion-header" role="tab"><button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-1 .item-1" aria-expanded="true" aria-controls="accordion-1 .item-1">Aenean arcu euismod aliquam, volutpat consequat?</button></h2>
-                            <div class="accordion-collapse collapse show item-1" role="tabpanel" data-bs-parent="#accordion-1">
-                                <div class="accordion-body">
-                                    <p>Maecenas diam volutpat, erat quis enim cras lobortis vivamus donec tempor. Congue ultrices donec turpis vivamus. Laoreet aenean metus, mi nunc massa feugiat duis. Pharetra erat consequat purus curae quisque, etiam accumsan class.</p>
-                                    <p class="mb-0">Commodo rutrum quisque curabitur habitasse, suspendisse etiam.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="accordion-item">
-                            <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-1 .item-2" aria-expanded="false" aria-controls="accordion-1 .item-2">Lorem quam erat placerat mollis, rhoncus senectus?</button></h2>
-                            <div class="accordion-collapse collapse item-2" role="tabpanel" data-bs-parent="#accordion-1">
-                                <div class="accordion-body">
-                                    <p class="mb-0">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="accordion-item">
-                            <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-1 .item-3" aria-expanded="false" aria-controls="accordion-1 .item-3">Iaculis accumsan id, facilisis proin ipsum velit neque?</button></h2>
-                            <div class="accordion-collapse collapse item-3" role="tabpanel" data-bs-parent="#accordion-1">
-                                <div class="accordion-body">
-                                    <p class="mb-0">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+   
     <section class="py-4 py-xl-5">
         <div class="container">
             <div class="text-white bg-primary border rounded border-0 border-primary d-flex flex-column justify-content-between flex-lg-row p-4 p-md-5">
