--- a/index.html
+++ b/index.html
@@ -35,10 +35,15 @@
                         <h1 class="display-4 fw-bold mb-5"><strong>&nbsp;10 videos curtos!</strong></h1>
                         <h1 class="display-4 fw-bold mb-5"><strong>Crie 10x mais rapido!</strong></h1>
                         <form class="d-flex justify-content-center flex-wrap" method="post" data-bs-theme="light">
-                            <div class="shadow-lg mb-3" style="background: rgba(255,255,255,0);"><input class="border rounded-pill form-control" type="url" style="--bs-body-bg: rgba(255,255,255,0);"></div>
-                            <div class="shadow-lg mb-3" style="--bs-body-bg: rgba(255,255,255,0);"><button class="btn btn-primary border rounded-pill" type="submit" style="margin-left: 12px;">Download</button></div>
+                            <div class="shadow-lg mb-3"><input class="URL-input" type="url"></div>
+                            <div class="shadow-lg mb-3"><button class="btn convert-button" type="button">Get Clips</button></div>
+                            <select class="form-select cut-duration" style="width: 99.901px;height: 43.3915px;padding-left: 8px;padding-right: 50px;text-align: right;">
+                                <option value="10" selected>10s</option>
+                                <option value="30">30s</option>
+                                <option value="60" selected>1m</option>
+                                <option value="90">1m30</option>
+                            </select>
                         </form>
-                    </div>
                     <div class="text-center"></div>
                 </div>
                 <div class="col-12 col-lg-10 mx-auto">
@@ -163,7 +168,7 @@
                 <div class="pb-2 pb-lg-1">
                     <h2 class="fw-bold text-secondary mb-2" style="margin-bottom: 16px;padding-bottom: 0px;padding-top: 0px;margin-top: 8px;">Descubra o melhor plano para seu workflow</h2>
                 </div>
-                <div class="my-2"><a class="btn btn-light fs-5 py-2 px-4" role="button" href="contacts.html">Contato</a></div>
+                <div class="my-2"><a class="btn btn-light fs-5 py-2 px-4" role="button" href="/contacts">Contato</a></div>
             </div>
         </div>
     </section>
