changes from lucas

--- a/index.html
+++ b/index.html
@@ -44,10 +44,11 @@
                                 <option value="90">1m30</option>
                             </select>
                         </form>
+                    </div>
                     <div class="text-center"></div>
                 </div>
                 <div class="col-12 col-lg-10 mx-auto">
-                    <div class="text-center position-relative"><iframe class="focus-ring focus-ring-primary" allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/CuFDcHB6TnY?autoplay=1&amp;mute=1&amp;loop=1&amp;playlist=CuFDcHB6TnY&amp;controls=0" ></iframe></div>
+                    <div class="text-center position-relative"><iframe class="focus-ring focus-ring-primary" allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/CuFDcHB6TnY?autoplay=1&amp;mute=1&amp;loop=1&amp;playlist=CuFDcHB6TnY&amp;controls=0" width="560" height="315"></iframe></div>
                 </div>
             </div>
         </div>
