--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
         </div>
     </footer>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/js/client_download_request.js"></script>
     <script src="assets/js/startup-modern.js"></script>
 </body>
 
