--- a/login.html
+++ b/login.html
@@ -32,7 +32,14 @@
             <div class="row">
                 <div class="col-md-5 col-xl-4 text-center text-md-start">
                     <h2 class="display-6 fw-bold mb-5"><span class="underline pb-1"><strong>Login</strong><br></span></h2>
-                    <div id="google-signin-button"></div>
+                    <form method="post" data-bs-theme="light">
+                        <div class="mb-3"><input class="shadow form-control" type="email" name="email" placeholder="Email"></div>
+                        <div class="mb-3"><input class="shadow form-control" type="password" name="password" placeholder="Senha"></div>
+                        <div class="mb-5">
+                          <button class="btn btn-primary shadow" type="submit">Log in</button>
+                          <button class="btn btn-danger shadow" id="google-signin-button" type="button">Sign in with Google</button>
+                        </div>
+                      </form>
                     <p class="text-muted"><a href="forgotten-password.html">Esqueci a senha</a></p>
                 </div>
             </div>
