--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link active" href="/index">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/integrations">Tecnologias</a></li>
+                    <!--<li class="nav-item"><a class="nav-link" href="/integrations">Tecnologias</a></li>-->
                     <li class="nav-item"><a class="nav-link" href="/pricing">Preços</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/contacts">Contatos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/contacts">Contato</a></li>
                     <li class="nav-item"><a class="nav-link" href="/login">Log in</a></li>
-                </ul><a class="btn btn-primary shadow" role="button" href="signup.html">Sign up</a>
+                </ul><a class="btn btn-primary shadow" role="button" href="/login">Sign up</a>
             </div>
         </div>
     </nav>
@@ -36,7 +36,7 @@
                         <h1 class="display-4 fw-bold mb-5"><strong>Crie 10x mais rapido!</strong></h1>
                         <form class="d-flex justify-content-center flex-wrap" method="post" data-bs-theme="light">
                             <div class="shadow-lg mb-3"><input class="URL-input" type="url"></div>
-                            <div class="shadow-lg mb-3"><button class="btn convert-button" type="button">Get Clips</button></div>
+                            <div class="shadow-lg mb-3"><button class="btn convert-button" type="button">Editar</button></div>
                             <select class="form-select cut-duration" style="width: 99.901px;height: 43.3915px;padding-left: 8px;padding-right: 50px;text-align: right;">
                                 <option value="10" selected>10s</option>
                                 <option value="30">30s</option>
