--- a/features.html
+++ b/features.html
@@ -20,9 +20,9 @@
                     <li class="nav-item"></li>
                     <li class="nav-item"></li>
                     <li class="nav-item"><a class="nav-link" href="pricing.html">Preços</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contacts.html">Contatos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contacts.html">Contato</a></li>
                     <li class="nav-item"><a class="nav-link" href="login.html">Log in</a></li>
-                </ul><a class="btn btn-primary shadow" role="button" href="signup.html">Sign up</a>
+                </ul><a class="btn btn-primary shadow" role="button" href="/login">Sign up</a>
             </div>
         </div>
     </nav>
