--- a/contacts.html
+++ b/contacts.html
@@ -17,11 +17,11 @@
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link " href="/index">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/integrations">Tecnologias</a></li>
+                    <!--<li class="nav-item"><a class="nav-link" href="/integrations">Tecnologias</a></li>-->
                     <li class="nav-item"><a class="nav-link" href="/pricing">Preços</a></li>
                     <li class="nav-item"><a class="nav-link active" href="/contacts">Contato</a></li>
                     <li class="nav-item"><a class="nav-link" href="/login">Log in</a></li>
-                </ul><a class="btn btn-primary shadow" role="button" href="signup.html">Sign up</a>
+                </ul><a class="btn btn-primary shadow" role="button" href="/login">Sign up</a>
             </div>
         </div>
     </nav>
@@ -47,7 +47,7 @@
             </div>
         </div>
     </section>
-    <section class="py-4 py-xl-5 mb-5">
+    <!--<section class="py-4 py-xl-5 mb-5">
         <div class="container">
             <div class="row mb-2">
                 <div class="col-md-8 col-xl-6 text-center mx-auto">
@@ -87,7 +87,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section>-->
     <footer>
         <div class="container py-4 py-lg-5">
             <hr>
