--- a/forgotten-password.html
+++ b/forgotten-password.html
@@ -16,11 +16,11 @@
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><span>Zeit AI - Editor de video</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <li class="nav-item"><a class="nav-link active" href="index">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="/integrations">Tecnologias</a></li>
+               <!--<li class="nav-item"><a class="nav-link" href="/integrations">Tecnologias</a></li>-->
                 <li class="nav-item"><a class="nav-link" href="/pricing">Preços</a></li>
                 <li class="nav-item"><a class="nav-link" href="/contacts">Contatos</a></li>
                 <li class="nav-item"><a class="nav-link" href="/login">Log in</a></li>
-            </ul><a class="btn btn-primary shadow" role="button" href="signup.html">Sign up</a>
+            </ul><a class="btn btn-primary shadow" role="button" href="/login">Sign up</a>
             </div>
         </div>
     </nav>
