--- a/login.html
+++ b/login.html
@@ -19,11 +19,11 @@
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link " href="index">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/integrations">Tecnologias</a></li>
+                   <!--<li class="nav-item"><a class="nav-link" href="/integrations">Tecnologias</a></li>-->
                     <li class="nav-item"><a class="nav-link" href="/pricing">Preços</a></li>
                     <li class="nav-item"><a class="nav-link" href="/contacts">Contatos</a></li>
                     <li class="nav-item"><a class="nav-link active" href="/login">Log in</a></li>
-                </ul><a class="btn btn-primary shadow" role="button" href="signup.html">Sign up</a>
+                </ul><a class="btn btn-primary shadow" role="button" href="/login">Sign up</a>
             </div>
         </div>
     </nav>
