--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Home - Zeit Video Editor</title>
-    <link rel="stylesheet" type="text/css" href="/css/Raleway.css">
-    <link rel="stylesheet" type="text/css" href="/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="/css/bs-theme-overrides.css">
-    <link rel="stylesheet" type="text/css" href="/css/untitled.css">
+    <link rel="stylesheet" type="text/css" href="css/Raleway.css">
+    <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/bs-theme-overrides.css">
+    <link rel="stylesheet" type="text/css" href="css/untitled.css">
 </head>
 
 <body style="background: var(--bs-light);color: var(--bs-light);">
