--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <li class="nav-item"><a class="nav-link" href="/pricing">Preços</a></li>
                     <li class="nav-item"><a class="nav-link" href="/contacts">Contatos</a></li>
                     <li class="nav-item"><a class="nav-link" href="/login">Log in</a></li>
-                </ul><a class="btn btn-primary shadow" role="button" href="/login">Sign up</a>
+                </ul><a class="btn btn-primary shadow" role="button" href="/dashboard">Sign up</a>
             </div>
         </div>
     </nav>
