--- a/dashboard.html
+++ b/dashboard.html
@@ -20,13 +20,15 @@
                     <li class="nav-item"><a class="nav-link active" href="/index">Home</a></li>
                     <!--<li class="nav-item"><a class="nav-link" href="/integrations">Tecnologias</a></li>-->
                     <li class="nav-item"><a class="nav-link" href="/pricing">Preços</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/contacts">Contatos</a></li>
+                    <li class="nav-item">   <a class="nav-link" href="/contacts">Contatos</a></li>
                     <li class="nav-item"><a class="nav-link" href="/login">Log in</a></li>
                 </ul><a class="btn btn-primary shadow" role="button" href="/login">Sign up</a>
             </div>
         </div>
     </nav>
-    
+    <div id="videoDashboard" class="container">
+        <!-- Videos will be added here -->
+    </div>
     <footer>
         <div class="container py-4 py-lg-5">
             <hr>
